[package]
name = "microsandbox-utils"
description = "Shared constants and utilities for the microsandbox project."
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
path = "lib/lib.rs"

[features]
http-client = ["dep:ureq"]

[dependencies]
dirs.workspace = true
libc.workspace = true
reflink-copy.workspace = true
scopeguard.workspace = true
ureq = { workspace = true, optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Security", "Win32_System_IO", "Win32_System_Ioctl", "Win32_System_Threading"] }

[dev-dependencies]
tempfile.workspace = true
